# wither_role

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
apps/auth/: containers.py  dependencies.py  exceptions.py  schemas.py  services.py  views.py
apps/character/: admin.py  containers.py  enums.py  models.py  repository.py  schemas.py  services.py  views.py
apps/user/: admin.py  containers.py  models.py  repository.py
base/repository/: repository.py
character/: models.py
config/: admin.py  app.py  babel.cfg  database.py  i18n.py  middlewares.py  register_handlers.py  registry.py  router.py  settings.py
config/commands/: init.py  professions.json
lang/en/LC_MESSAGES/: messages.po
migrations/: env.py
migrations/versions/: 2024_03_12_2009-1ecee95237e1_.py  2024_03_16_1636-f2782adb377e_.py  2024_04_21_2029-eac30a23c7a1_.py  2024_04_22_1943-6370e7a01ef5_.py  2024_07_14_2306-1ffc959fc9c2_.py  2024_07_15_2202-6d84ea605ba5_.py  2024_07_15_2220-efd3c52facde_.py  2024_07_24_2031-a56c7f2a3773_.py  2024_07_24_2034-a598e58eb6ac_.py  2024_07_24_2044-af6d9dae9a0b_.py  2024_08_05_2009-73fea24744c2_.py
templates/auth/: login.html  register.html
templates/elements/: base.html
utils/dependencies/: csrf.py
utils/exceptions/: __init__.py  examples_generator.py
utils/exceptions/http/: api.py  auth.py  base.py
utils/schemas/: base.py
utils/security/: jwt_backend.py  password_helper.py  schemas.py
