[tool.poetry]
name = "wither-role"
version = "0.1.0"
description = ""
authors = ["misha kalita <mishakalita1@gmail.com>"]
readme = "README.md"
packages = [{include = "wither_role"}]

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
fastapi = "^0.110.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
yarl = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
